[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
description = "a msgpack-rpc client and server based on tokio"
homepage = "https://github.com/little-dude/rmp-rpc"
keywords = [
    "msgpack",
    "rpc",
    "msgpack-rpc",
]
license-file = "LICENSE-MIT"
name = "rmp-rpc"
readme = "README.md"
repository = "https://github.com/little-dude/rmp-rpc"
version = "0.3.0"
edition = "2018"

[dependencies]
bytes = "^0.5"
futures = "^0.3"
log = "^0.4"
rmpv = "^0.4"
tokio = { version = "^0.2", features = ["rt-core"] }
tokio-util = { version = "^0.3", features = ["codec", "compat"] }

[dependencies.clippy]
optional = true
version = "^0.0"

[dev-dependencies]
env_logger = "^0.5"
chrono = "^0.4"
tokio = { version = "^0.2", features = ["macros", "tcp", "time"] }
